--- a/Project/web/css/main.css
+++ b/Project/web/css/main.css
@@ -26,3 +26,54 @@ table#itemdetails th,td {
 table#itemdetails .firstCol {
   padding-right: 20px;
 }
+
+/* Search */
+.searchbox {
+  width: 60%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.searchbox select#type{
+  overflow-y: auto;
+}
+
+.searchbox select, input[type=text]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 4px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  text-align: left;
+}
+
+.searchbox input[type=text]:focus  {
+  text-align: center;
+}
+
+.searchbox #author {
+  display: inline-block;
+  width: 70%;
+  float: left;
+}
+
+.searchbox #year {
+  display: inline-block;
+  width: auto;
+  margin-left: 8px;
+  max-width: calc(30% - 8px);
+  float: left;
+}
+
+.searchbox input[type=submit] {
+  width: 100%;
+  background-color: #658eca;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
