--- a/Project/web/css/main.css
+++ b/Project/web/css/main.css
@@ -144,3 +144,16 @@ table#cartlist {
 table#cartlist .faCol {
   margin-left: 10px;
 }
+
+input[type=button].nicebutton, input[type=submit].nicebutton {
+  width: 40%;
+  background-color: #658eca;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 30px;
+}
