--- a/Project/web/css/bootstrap/css/main.css
+++ b/Project/web/css/bootstrap/css/main.css
@@ -242,8 +242,8 @@ Navigation Style
   height: auto;
 }
 .top-nav-collapse .navbar-brand img {
-  width: 52px;
-  height: 52px;
+  width: auto;
+  height: 45px;
 }
 .top-nav-collapse .nav > li > a {
   padding: 30px 15px;
@@ -711,8 +711,8 @@ Media Queries Style
     height: auto;
   }
   .navbar-default .navbar-header .navbar-brand img {
-    width: 52px;
-    height: 52px;
+    width: 152px;
+    height: 55px;
   }
   .navbar-default .nav-wrap {
     width: 100%;
