--- a/Project/web/css/main.css
+++ b/Project/web/css/main.css
@@ -157,3 +157,9 @@ input[type=button].nicebutton, input[type=submit].nicebutton {
   display: inline-block;
   margin-top: 30px;
 }
+
+.checkboxheadcol {
+  text-align: center;
+  margin-bottom: 15px;
+  display: block;
+}
