--- a/Project/web/css/main.css
+++ b/Project/web/css/main.css
@@ -178,3 +178,7 @@ input[type=button].nicebutton, input[type=submit].nicebutton {
   margin-bottom: 15px;
   display: block;
 }
+
+#errorbox {
+  color: red;
+}
